unpackaged/main/default/objects/TransactionItem__c/TransactionItem__c.object-meta.xml
<CustomObject>
    <label>Transaction Item</label>
    <nameField>
        <displayFormat>TRI-{0000000000}</displayFormat>
        <label>Transaction Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>