unpackaged/main/default/objects/TransactionItem__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transaction Items</relationshipLabel>
    <relationshipName>TransactionItems</relationshipName>
    <type>Lookup</type>
</CustomField>