unpackaged/main/default/objects/TransactionItem__c/fields/InclTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>InclTaxAmount__c</fullName>
    <label>Incl Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>