unpackaged/main/default/objects/TransactionItem__c/fields/IsGiftTransactionDetail__c.field-meta.xml
<CustomField>
    <fullName>IsGiftTransactionDetail__c</fullName>
    <label>Is Gift Transaction Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>false</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>