unpackaged/main/default/objects/TransactionItem__c/fields/NbOfTransactions__c.field-meta.xml
<CustomField>
    <fullName>NbOfTransactions__c</fullName>
    <formula>1/ Transaction__r.NbOfLines__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Transactions</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>