unpackaged/main/default/objects/TransactionItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Transaction Items</relationshipLabel>
    <relationshipName>Transaction_Items</relationshipName>
    <type>Lookup</type>
</CustomField>