unpackaged/main/default/objects/TransactionItem__c/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <formula>&quot;aaaa&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductCategory</label>
    <type>Text</type>
</CustomField>