unpackaged/main/default/objects/TransactionItem__c/fields/R360ID__c.field-meta.xml
<CustomField>
    <fullName>R360ID__c</fullName>
    <displayFormat>TI-{0000000}</displayFormat>
    <label>R360 ID</label>
    <type>AutoNumber</type>
</CustomField>