unpackaged/main/default/objects/TransactionItem__c/fields/ReasonForDiscount__c.field-meta.xml
<CustomField>
    <fullName>ReasonForDiscount__c</fullName>
    <label>Reason For Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>