unpackaged/main/default/objects/TransactionItem__c/fields/Sales_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Sales_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transaction_Items</relationshipName>
    <type>Lookup</type>
</CustomField>