unpackaged/main/default/objects/TransactionItem__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Transaction Items</relationshipLabel>
    <relationshipName>TransactionItems</relationshipName>
    <type>Lookup</type>
</CustomField>