unpackaged/main/default/objects/TransactionItem__c/fields/TransactionLineId__c.field-meta.xml
<CustomField>
    <fullName>TransactionLineId__c</fullName>
    <externalId>true</externalId>
    <label>Transaction Line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>