unpackaged/main/default/objects/TransactionItem__c/fields/UCRLastUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>UCRLastUpdateDate__c</fullName>
    <label>UCR Last Update Date</label>
    <type>Date</type>
</CustomField>