unpackaged/main/default/objects/TransactionItem__c/fields/VatRate__c.field-meta.xml
<CustomField>
    <fullName>VatRate__c</fullName>
    <label>Vat Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>