unpackaged/main/default/objects/TransactionItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Client__c</columns>
    <columns>ExclTaxAmount__c</columns>
    <columns>InclTaxAmount__c</columns>
    <columns>Image__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Store__c</columns>
    <columns>Type__c</columns>
    <columns>VatRate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>